# ptools

./: CMakeLists.txt  LICENSE  README.md
.github/: CODEOWNERS
.github/workflows/: develop.yml  release.yml
cmake/: ptools-config.cmake.in
dox/: examples.dox  main.dox
src/: CMakeLists.txt  Doxyfile.in  diag_mpi.f90  diag_omp.f90  diag_ompi.f90  mptools.f90  mptools_mpi.f90  mptools_omp.f90  mptools_ompi.f90  mptools_parameters.f90  mptools_system.f90  mptools_version.f90.in  show_setup.bsh.in
tests/: CMakeLists.txt
